Finalise Clue project submission